Implementation, and Java version change
* Change Java 11 to Java 17. Now using Temurin image in Dockerfile
* Spring Security. Manual JWT generation, application configured as a Spring OAuth2 Resource Server (consumes the self issued tokens)
* Global config available to all layers, ObjectMapper (not explicitly used, yet), and PasswordEncoder since used at SVC and at Security Config
* Dao: use batches, add tests for operations. Still changing migration files since heavily WIP
