# api/src/main/kotlin/net/packlister/packlister/api/GlobalExceptionHandler.kt
@@ -2,6 +2,9 @@ package net.packlister.packlister.api
 
 import net.packlister.packlister.generated.model.APIError
 import net.packlister.packlister.generated.model.ErrorWrapper
+import net.packlister.packlister.model.ConflictError
+import net.packlister.packlister.model.CustomError
+import net.packlister.packlister.model.ForbiddenError
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.ControllerAdvice
@@ -11,9 +14,19 @@ import org.springframework.web.bind.annotation.ExceptionHandler
 class GlobalExceptionHandler {
     @ExceptionHandler
     fun handle(ex: CustomError): ResponseEntity<ErrorWrapper> {
-        return ResponseEntity(
-            ErrorWrapper().errors(listOf(APIError().message(ex.message))),
-            HttpStatus.BAD_REQUEST
-        )
+        return when (ex) {
+            is ConflictError -> ResponseEntity(
+                ErrorWrapper().errors(listOf(APIError().message(ex.message))),
+                HttpStatus.CONFLICT
+            )
+            is ForbiddenError -> ResponseEntity(
+                ErrorWrapper().errors(listOf(APIError().message(ex.message))),
+                HttpStatus.FORBIDDEN
+            )
+            else -> ResponseEntity(
+                ErrorWrapper().errors(listOf(APIError().message(ex.message))),
+                HttpStatus.BAD_REQUEST
+            )
+        }
     }
 }
