# api/src/main/kotlin/net/packlister/packlister/api/UserItemController.kt
@@ -1,7 +1,7 @@
 package net.packlister.packlister.api
 
 import net.packlister.packlister.generated.api.ItemsApiDelegate
-import net.packlister.packlister.generated.model.ErrorWrapper
+import net.packlister.packlister.generated.model.DeleteItemsRequest
 import net.packlister.packlister.generated.model.UpsertItemsRequest
 import net.packlister.packlister.generated.model.UserItemsResponse
 import net.packlister.packlister.model.UserItem
@@ -9,7 +9,6 @@ import net.packlister.packlister.svc.UserItemService
 import org.springframework.beans.factory.annotation.Autowired
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
-import java.util.UUID
 import net.packlister.packlister.generated.model.UserItem as APIUserItem
 
 @RestController
@@ -17,8 +16,14 @@ class UserItemController(
     @Autowired
     private val userItemService: UserItemService
 ) : ItemsApiDelegate {
-    override fun deleteItems(UUID: List<UUID>): ResponseEntity<ErrorWrapper> {
-        throw CustomError("nope")
+    override fun deleteItems(deleteItemsRequest: DeleteItemsRequest): ResponseEntity<Void> {
+        userItemService.deleteUserItems(deleteItemsRequest.userItemIds)
+        return ResponseEntity.ok().build()
+    }
+
+    override fun getItems(): ResponseEntity<UserItemsResponse> {
+        val apiUserItems = userItemService.getUserItems().map { it.toApiModel() }
+        return ResponseEntity.ok(UserItemsResponse().userItems(apiUserItems))
     }
 
     override fun upsertItems(upsertItemsRequest: UpsertItemsRequest): ResponseEntity<UserItemsResponse> {
