# dao/src/main/kotlin/net/packlister/packlister/dao/entity/UserEntity.kt
@@ -1,5 +1,6 @@
 package net.packlister.packlister.dao.entity
 
+import net.packlister.packlister.model.User
 import java.util.UUID
 import javax.persistence.Entity
 import javax.persistence.Id
@@ -7,9 +8,12 @@ import javax.persistence.Table
 
 @Entity
 @Table(name = "accounts")
-class AccountEntity(
+class UserEntity(
     @Id
     val id: UUID,
     val username: String,
-    val email: String
-)
+    val email: String,
+    val passwordHash: String
+) {
+    fun toModel() = with(this) { User(id, username, email, passwordHash) }
+}
