# dao/src/main/kotlin/net/packlister/packlister/dao/model/NewUser.kt
@@ -1,0 +1,7 @@
+package net.packlister.packlister.dao.model
+
+data class NewUser(
+    val username: String,
+    val email: String,
+    val passwordHash: String
+)
