# svc/src/main/kotlin/net/packlister/packlister/svc/model/UserRegistration.kt
@@ -1,0 +1,7 @@
+package net.packlister.packlister.svc.model
+
+data class UserRegistration(
+    val username: String,
+    val email: String,
+    val password: String
+)
